--- a/springboot-rest-api-sample/src/main/resources/static/index.html
+++ b/springboot-rest-api-sample/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
 
 <div class="mb-3">
   <label for="id" class="form-label">ID</label>
-  <input type="text" class="form-control" id="id" readyonly="readonly">
+  <input type="text" class="form-control" id="id" readonly="readonly">
 </div>
 
 <div class="mb-3">
@@ -31,16 +31,44 @@
 
 
 
-
-
 </form>
 
+<button type="button" class="btn btn-primary" onclick="salvarUsuario()">Salvar</button>
 
-
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  
+
+<script type="text/javascript">
+function salvarUsuario(){
+	
+	var id = $("#id").val();
+	var nome = $("#nome").val();
+	var idade = $("#idade").val();
+	
+	
+	alert(nome + "-" + id + "-" + idade);
+}
+
+
+
+</script>  
+  
+  
+    
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
