--- a/springboot-rest-api-sample/src/main/resources/static/index.html
+++ b/springboot-rest-api-sample/src/main/resources/static/index.html
@@ -28,20 +28,17 @@
   <label for="idade" class="form-label">Idade </label>
   <input type="number" class="form-control" id="idade" >
 </div>
-
-
-
 </form>
 
 <button type="button" class="btn btn-primary" onclick="salvarUsuario()">Salvar</button>
+<button type="button" class="btn btn-secondary" onclick="document.getElementById('formCadastroUser').reset()">Novo</button>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  
-
+ 
 <script type="text/javascript">
 function salvarUsuario(){
 	
@@ -50,10 +47,25 @@ function salvarUsuario(){
 	var idade = $("#idade").val();
 	
 	
-	alert(nome + "-" + id + "-" + idade);
+	$.ajax({
+		
+		method:"POST",
+		url: "salvar",
+		data: JSON.stringify({id:id,nome:nome,idade:idade}),
+		contentType: "application/json; charset-utf-8",
+		success: function(response){
+			
+			$("#id").val(response.id)
+			alert("gravou com sucesso!")
+				
+		}
+
+		}).fail(function (xhr,status,errorthrown){
+				alert("erro ao salvar usuario" + xhr.responseText)
+
+});
+	
 }
-
-
 
 </script>  
   
@@ -61,14 +73,4 @@ function salvarUsuario(){
     
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
 
